DMP-2156 Updated from review comments